syntax = "proto3";
package multiraft;

message StoreData {
    string key = 1;
    bytes value = 2;
}
  